ie text align fix

--- a/sass/ie.scss
+++ b/sass/ie.scss
@@ -4,7 +4,7 @@
 @include blueprint-ie;
 
 
-#my-container {
+#container {
   text-align: left
 }
 
@@ -16,3 +16,5 @@ nav#links ul {
     display: none;
   }
 }
+
+
